--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "build": "echo \"Buliding ...\""
   },
   "author": "Jarosław Bagnicki <jarek@bagnicki.net>",
