--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
+    "watch": "webpack --watch",
     "start": "npm run build && node dist/main.js"
   },
   "author": "Jarosław Bagnicki <jarek@bagnicki.net>",
