--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
+  },
+  "dependencies": {
+    "markdown-element": "^2.0.2"
   }
 }
