--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Jarosław Bagnicki <jarek@bagnicki.net>",
   "license": "Unlicense",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.6.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
